# opendid

./: Cargo.toml  LICENSE  README.md
misc/: did-doc-01.json  did-method-registry-html.txt
spec/: did-signature-spec-v0.0.1.md
src/: algo.rs  cmd.rs  cmd_default.rs  cmd_did_document.rs  cmd_test.rs  db.rs  did.rs  did_resolver.rs  err.rs  main.rs  p256k1.rs  signed_message_parser.rs  storage.rs  util.rs
