[package]
name = "opendid"
version = "0.0.0"
authors = ["Hatter Jiang <jht5945@gmail.com>"]
edition = "2018"
description = "OpenDID Tool"
readme = "README.md"
repository = "https://github.com/OpenDID/opendid"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
