[package]
name = "opendid"
version = "0.0.0"
authors = ["Hatter Jiang <jht5945@gmail.com>"]
edition = "2018"
description = "OpenDID Tool"
readme = "README.md"
repository = "https://github.com/OpenDID/opendid"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-error = "1.2.3"
clap = "2.33.1"
rusqlite = "0.23.1"
lazy_static = "1.4.0"
